# worldindex

./: .gitignore  README.md  pyproject.toml
api/: __init__.py  config.py  models.py  server.py  service.py
compression/: __init__.py  models.py  pipeline.py  shards.py  token_compressor.py
config/: gpu_pipeline_droid.yaml  local_pipeline_droid.yaml  pipeline.yaml
config/datasets/: aloha.yaml  bridge.yaml  droid.yaml
config/local/: compress_aloha_smoke.yaml  serve_aloha_smoke.yaml
docs/: compression-working-explanation.md  extraction-working-explanation.md  index-working-explanation.md  ingestion-working-explanation.md
extraction/: __init__.py  pipeline.py
index/: __init__.py  builder.py
ingestion/: __init__.py  clip_former.py  config.py
pipeline/: __init__.py  cli.py  config.py  models.py  orchestrator.py  state.py
retrieval/: __init__.py  dtw.py  engine.py  maxsim.py  models.py  query_encoder.py  shard_reader.py
scripts/: compress.py  limited_extraction.ipynb  pipeline.py  run_extraction.py  serve.py
tests/api/: __init__.py  fakes.py  test_server.py
tests/compression/: test_pipeline.py  test_shards.py  test_token_compressor.py
tests/extraction/: spawn_fakes.py  test_pipeline.py  test_pipeline_integration.py
tests/index/: test_builder.py
tests/ingestion/: test_clip_former.py  test_clip_former_integration.py
tests/pipeline/: test_cli.py  test_orchestrator.py  test_state.py
tests/retrieval/: test_dtw.py  test_engine.py  test_maxsim.py  test_query_encoder.py  test_shard_reader.py
